--- a/public/index.html
+++ b/public/index.html
@@ -432,7 +432,8 @@
               <div class="wrks__tbs-itm" id="tab1">
                 <div class="arn-msnr"><a class="cl cl-7 itm full-modal-open-js" href="#" data-img="img/project-1.jpg">
                   <picture>
-                    <source srcset="img/project-1-sm.jpg" media="(min-width: 576px)"/><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-1-xs.jpg" alt=""/>
+                    <source srcset="img/project-1-sm.jpg" media="(min-width: 576px)" type="image/jpg"/>
+                    <source srcset="img/webp/project-1-xs.webp" type="image/webp"/><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-1-xs.jpg" alt=""/>
                   </picture>
                   <div class="itm__more">
                     <div class="ttl-bord">
@@ -443,7 +444,8 @@
                     <button class="btt btt-blue" type="button"><span>Нажмите для просмотра проекта</span></button>
                   </div></a><a class="cl cl-5 itm full-modal-open-js" href="#" data-img="img/project-2.jpg">
                   <picture>
-                    <source srcset="img/project-2-sm.jpg" media="(min-width: 576px)"/><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-2-xs.jpg" alt=""/>
+                    <source srcset="img/project-2-sm.jpg" media="(min-width: 576px)" type="image/jpg"/>
+                    <source srcset="img/webp/project-2-xs.webp" type="image/webp"/><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-2-xs.jpg" alt=""/>
                   </picture>
                   <div class="itm__more">
                     <div class="ttl-bord">
@@ -456,7 +458,8 @@
                   <div class="cl-7">
                     <div class="arn-msnr"><a class="cl cl-7 itm ht6 full-modal-open-js" href="#" data-img="img/project-3.jpg">
                       <picture>
-                        <source srcset="img/project-3-sm.jpg" media="(min-width: 576px)"/><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-3-xs.jpg" alt=""/>
+                        <source srcset="img/project-3-sm.jpg" media="(min-width: 576px)" type="image/jpg"/>
+                        <source srcset="img/webp/project-3-xs.webp" type="image/webp"/><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-3-xs.jpg" alt=""/>
                       </picture>
                       <div class="itm__more">
                         <div class="ttl-bord">
@@ -468,7 +471,8 @@
                         <button class="btt btt-blue" type="button"><span>Нажмите для просмотра проекта</span></button>
                       </div></a><a class="cl cl-5 itm ht6 full-modal-open-js" href="#" data-img="img/project-4.jpg">
                       <picture>
-                        <source srcset="img/project-4-sm.jpg" media="(min-width: 576px)"/><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-4-xs.jpg" alt=""/>
+                        <source srcset="img/project-4-sm.jpg" media="(min-width: 576px)" type="image/jpg"/>
+                        <source srcset="img/webp/project-4-xs.webp" type="image/webp"/><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-4-xs.jpg" alt=""/>
                       </picture>
                       <div class="itm__more">
                         <div class="ttl-bord">
@@ -481,7 +485,8 @@
                         <button class="btt btt-blue" type="button"><span>Нажмите для просмотра проекта</span></button>
                       </div></a><a class="cl cl-7 itm ht5 full-modal-open-js" href="#" data-img="img/project-5.jpg">
                       <picture>
-                        <source srcset="img/project-5-sm.jpg" media="(min-width: 576px)"/><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-5-xs.jpg" alt=""/>
+                        <source srcset="img/project-5-sm.jpg" media="(min-width: 576px)" type="image/jpg"/>
+                        <source srcset="img/webp/project-5-xs.webp" type="image/webp"/><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-5-xs.jpg" alt=""/>
                       </picture>
                       <div class="itm__more">
                         <div class="ttl-bord">
@@ -494,7 +499,8 @@
                         <button class="btt btt-blue" type="button"><span>Нажмите для просмотра проекта</span></button>
                       </div></a><a class="cl cl-5 itm ht5 full-modal-open-js" href="#" data-img="img/project-6.jpg">
                       <picture>
-                        <source srcset="img/project-6-sm.jpg" media="(min-width: 576px)"/><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-6-xs.jpg" alt=""/>
+                        <source srcset="img/project-6-sm.jpg" media="(min-width: 576px)" type="image/jpg"/>
+                        <source srcset="img/webp/project-6-xs.webp" type="image/webp"/><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-6-xs.jpg" alt=""/>
                       </picture>
                       <div class="itm__more">
                         <div class="ttl-bord">
@@ -508,7 +514,8 @@
                   </div>
                   <div class="cl-5 cl-5-right"><a class="cl cl-12 itm ht4 full-modal-open-js" href="#" data-img="img/project-7.jpg">
                     <picture>
-                      <source srcset="img/project-7-sm.jpg" media="(min-width: 576px)"/><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-7-xs.jpg" alt=""/>
+                      <source srcset="img/project-7-sm.jpg" media="(min-width: 576px)" type="image/jpg"/>
+                      <source srcset="img/webp/project-7-xs.webp" type="image/webp"/><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-7-xs.jpg" alt=""/>
                     </picture>
                     <div class="itm__more">
                       <div class="ttl-bord">
@@ -519,7 +526,8 @@
                       <button class="btt btt-blue" type="button"><span>Нажмите для просмотра проекта</span></button>
                     </div></a><a class="cl cl-12 itm full-modal-open-js" href="#" data-img="img/project-8.jpg">
                     <picture>
-                      <source srcset="img/project-8-sm.jpg" media="(min-width: 576px)"/><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-8-xs.jpg" alt=""/>
+                      <source srcset="img/project-8-sm.jpg" media="(min-width: 576px)" type="image/jpg"/>
+                      <source srcset="img/webp/project-8-xs.webp" type="image/webp"/><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-8-xs.jpg" alt=""/>
                     </picture>
                     <div class="itm__more">
                       <div class="ttl-bord">
@@ -531,7 +539,8 @@
                     </div></a>
                   </div><a class="cl cl-7 itm full-modal-open-js" href="#" data-img="img/project-9.jpg">
                   <picture>
-                    <source srcset="img/project-9-sm.jpg" media="(min-width: 576px)"/><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-9-xs.jpg" alt=""/>
+                    <source srcset="img/project-9-sm.jpg" media="(min-width: 576px)" type="image/jpg"/>
+                    <source srcset="img/webp/project-9-xs.webp" type="image/webp"/><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-9-xs.jpg" alt=""/>
                   </picture>
                   <div class="itm__more">
                     <div class="ttl-bord">
@@ -542,7 +551,8 @@
                     <button class="btt btt-blue" type="button"><span>Нажмите для просмотра проекта</span></button>
                   </div></a><a class="cl cl-5 itm lst" href="#">
                   <picture>
-                    <source srcset="img/project-all-xs.jpg" media="(min-width: 576px)"/><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-all.jpg" alt=""/>
+                    <source srcset="img/project-all.jpg" media="(min-width: 576px)" type="image/jpg"/>
+                    <source srcset="img/webp/project-all-xs.webp" type="image/webp"/><img class="object-fit-js" src="img/loadgif.gif" data-src="img/project-all-xs.jpg" alt=""/>
                   </picture>
                   <div class="itm__more" id="loadWorks">
                     <big class="thm d-inline-block">
