--- a/public/02-servise.html
+++ b/public/02-servise.html
@@ -180,7 +180,7 @@
         </section>
         <!-- end s-servises-->
         <!-- start s-form-->
-        <section class="s-form section">
+        <section class="s-form section" id="s-form">
           <div class="container">
             <div class="section-title text-center">
               <h2> <span class="text-warning">Оценить  </span> 
