--- a/public/index.html
+++ b/public/index.html
@@ -128,17 +128,17 @@
           </div>
         </div>
         <div class="crls-cl crls-tl">
-          <div class="after"><a class="logo logo--js logo crls__logo" href="#mainHead">
+          <div class="after"><a class="logo logo--js logo crls__logo" href="#mainHead1">
             <div class="logo_main wow fadeInLeft"><img class="res-i" src="img/logo.svg" alt=""></div>
             <div class="logo_name wow fadeInRight"><img class="res-i" src="img/logo-name.svg" alt=""></div></a>
           </div><a class="crls_menu" id="menuOpen"><span class="btt-menu"><i></i><i></i><i></i></span><span class="txt">меню</span></a>
         </div>
         <div class="crls-cl crls-tr wow fadeIn" data-wow-delay=".22s">
           <div class="crls__langs"><a href="#">Eng</a><span class="crls__current text-white">Rus</span>
-          </div><a class="crls__call callDown" href="#s-form"><span class="btt-call"><span class="animate">
+          </div><a class="crls__call callDown" href="#s-form1"><span class="btt-call"><span class="animate">
                 <svg class="icon icon-hand2 ">
                   <use xlink:href="img/svg/sprite.svg#hand2"></use>
-                </svg></span></span><span class="txt">связаться</span></a><a class="crls__call callTop d-none" href="#mainHead"><span class="btt-call"><span>
+                </svg></span></span><span class="txt">связаться</span></a><a class="crls__call callTop d-none" href="#mainHead1"><span class="btt-call"><span>
                 <svg class="icon icon-arrow-top ">
                   <use xlink:href="img/svg/sprite.svg#arrow-top"></use>
                 </svg></span></span><span class="txt">вверх</span></a>
