--- a/public/index.html
+++ b/public/index.html
@@ -427,11 +427,11 @@
                 </div>
                 <div class="d-none d-lg-block">
                   <ul class="etabs wrks__tbs-links">
-                    <li class="active"><a href="#tab1">Все работы</a></li>
-                    <li> <a href="#tab1">Веб</a></li>
-                    <li> <a href="#tab1">Упаковка</a></li>
-                    <li> <a href="#tab1">Полиграфия</a></li>
-                    <li> <a href="#tab1">Мобильные приложения</a></li>
+                    <li class="active"><a href="#">Все работы</a></li>
+                    <li> <a href="#">Веб</a></li>
+                    <li> <a href="#">Упаковка</a></li>
+                    <li> <a href="#">Полиграфия</a></li>
+                    <li> <a href="#">Мобильные приложения</a></li>
                     <!--
                     <li><a href="#tab2"></a></li>
                     <li><a href="#tab3"></a></li>
