--- a/public/03-blog.html
+++ b/public/03-blog.html
@@ -449,6 +449,11 @@
       <!-- .Team /-->
     </div>
     <!-- #modal-team-->
+    <div class="zoom-anim-dialog mfp-hide modal-win modal-win--thanks " id="modal-thanks"><img class="res-i" src="img/check-thanks.png" alt=""/>
+      <div class="modal-win__title">Спасибо за Вашу заявку!</div>
+      <div class="modal-win__text">В&nbsp;течении рабочего дня наш специалист свяжется с&nbsp;вами</div>
+    </div>
+    <!-- #modal-thanks-->
     <!-- modal-->
     <script src="js/jquery.min.js"></script>
     <script src="libs/jquery-asPieProgress-master/dist/jquery-asPieProgress.min.js"></script>
