--- a/public/index.html
+++ b/public/index.html
@@ -1016,7 +1016,7 @@
         <!-- start s-form-->
         <section class="s-form section" id="s-form">
           <div class="container">
-            <div class="section-title text-center">
+            <div class="section-title text-center"><a class="popup-with-move-anim" href="#modal-thanks">modal-thanks</a>
               <h2> <span class="text-warning">Оценить  </span> 
                 ваш проект?
               </h2>
@@ -1270,6 +1270,11 @@
       <!-- .Team /-->
     </div>
     <!-- #modal-team-->
+    <div class="zoom-anim-dialog mfp-hide modal-win modal-win--thanks " id="modal-thanks"><img class="res-i" src="img/check-thanks.png" alt=""/>
+      <div class="modal-win__title">Спасибо за Вашу заявку!</div>
+      <div class="modal-win__text">В&nbsp;течении рабочего дня наш специалист свяжется с&nbsp;вами</div>
+    </div>
+    <!-- #modal-thanks-->
     <!-- modal-->
     <script src="js/jquery.min.js"></script>
     <script src="libs/jquery-asPieProgress-master/dist/jquery-asPieProgress.min.js"></script>
